--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,9 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
+    "server": "nodemon index.js"
   }
 }
