npm installed moment js for calendar localization

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "evergreen-ui": "^5.1.2",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
