--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.2",
     "evergreen-ui": "^5.1.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-big-calendar": "^0.33.2",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
