--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,22 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "evergreen-ui": "^5.1.2",
     "moment": "^2.29.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
