--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.9.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "browserslist": "^4.16.7",
     "evergreen-ui": "^5.1.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
-    "react-big-calendar": "^0.33.2",
+    "react-big-calendar": "^0.33.6",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^16.14.0",
     "react-draggable": "^4.4.3",
