--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "cd server && npm start",
+    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
