--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "client": "npm start --prefix client"
   },
   "eslintConfig": {
     "extends": "react-app"
