--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix client",
+    "start": "cd ./server && npm start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+
   },
   "repository": {
     "type": "git",
