--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
+    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
     "server": "nodemon index.js"
   }
 }
