--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "server": "nodemon index.js"
+    "client-install": "npm install --prefix client",    
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"cd ../client && npm start\""
   }
 }
