--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "client-install": "npm install --prefix client",
     "start": "cd ./server && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js",
+    "server": "cd ./server && nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ./client && npm start\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
