--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "client-install": "npm install --prefix client",
     "start": "cd ./server && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd ./server && nodemon index.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"cd ./client && npm start\"",
+    "server": "cd ./server && npm server",
+    "client": "cd ./erver && npm client",
+    "dev": "cd ./server && npm dev",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
