--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "client-install": "npm install --prefix client",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "client": "npm start --prefix client",
+    "client": "cd ../client && npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ../client && npm start\""
   }
 }
