--- a/package.json
+++ b/package.json
@@ -15,13 +15,8 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "client-install": "npm install --prefix client",
     "start": "cd ./server && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd ./server && npm server",
-    "client": "cd ./erver && npm client",
-    "dev": "cd ./server && npm dev",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
