--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "cd ../client && npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"cd ../client && npm start\""
+    "dev": "concurrently \"npm run server\" \"cd ../client && npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   }
 }
