--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "server": "nodemon index.js",
     "client": "cd ../client && npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "build": "cd ../client && npm run build",
+    "heroku-postbuild": "npm run build"
+
   }
 }
