reverting previous changes

--- a/server/package.json
+++ b/server/package.json
@@ -15,14 +15,11 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node bin/www",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client-install": "npm install --prefix client",
+    "start": "node index.js",
     "server": "nodemon index.js",
-    "client": "cd ../client && npm run start",
-    "install": "cd ../client && npm install",
+    "client": "cd ../client && npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "build": "cd ../client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   }
 }
