--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,6 @@
     "server": "nodemon index.js",
     "client": "cd ../client && npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm run build --prefix client"
   }
 }
