--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "node index.js && npm run client",
+    "start": "node index.js && npm dev",
     "server": "nodemon index.js",
     "client": "cd ../client && npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"cd ../client && npm start\"",
