--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "job-search",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
