fixed path to client folder in heroku postbuild script

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "cd ./server && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd ../client && npm install && npm run build"
+    "heroku-postbuild": "cd ./client && npm install && npm run build"
 
   },
   "repository": {
