--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "engines": {
-    "node": "14.x"
+    "node": "^14.5.0"
   },
   "dependencies": {
     "concurrently": "^5.3.0",
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "cd ./server && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd ./client && npm install && npm run start"
+    "heroku-postbuild": "cd client && npm install && npm run build"
 
   },
   "repository": {
